--- a/README.pod
+++ b/README.pod
@@ -10,6 +10,61 @@ TOML::Tiny - a minimal, pure perl TOML parser and serializer
 
 version 0.01
 
+=head1 SYNOPSIS
+
+  use TOML::Tiny qw(from_toml to_toml);
+
+  binmode STDIN,  ':encoding(UTF-8)';
+  binmode STDOUT, ':encoding(UTF-8)';
+
+  # Decoding TOML
+  my $toml = do{ local $/; <STDIN> };
+  my ($parsed, $error) = from_toml $toml;
+
+  # Encoding TOML
+  say to_toml({
+    stuff => {
+      about => ['other', 'stuff'],
+    },
+  });
+
+  # Object API
+  my $parser = TOML::Tiny->new;
+  my $result = $parser->parse($toml);
+
+=head1 DESCRIPTION
+
+C<TOML::Tiny> implements a pure-perl parser and generator for the
+L<TOML|https://github.com/toml-lang/toml> data format. It conforms to TOML
+v5.0.
+
+C<TOML::Tiny> strives to maintain an interface compatible to the L<TOML> and
+L<TOML::Parser> modules, and could even be used to override C<$TOML::Parser>:
+
+  use TOML;
+  use TOML::Tiny;
+
+  local $TOML::Parser = TOML::Tiny->new(...);
+  say to_toml(...);
+
+=head1 EXPORTS
+
+=head2 from_toml
+
+=head2 to_toml
+
+=head1 OBJECT API
+
+=head2 new
+
+=head2 decode
+
+=head2 encode
+
+=head2 parse
+
+=head1 COMPATIBILITY
+
 =head1 AUTHOR
 
 Jeff Ober <sysread@fastmail.fm>
