Fix broken OO interface

--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 {{$NEXT}}
 -Performance improvements in TOML::Tiny::Tokenizer->next_token
+-Fix totally broken OO interface (thanks noctux)
 
 0.05 2020-01-21
 -POD fixes for TOML::Tiny::Grammar
