--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 {{$NEXT}}
 -Fix warning when calling `to_toml(from_toml(...))`
 -Fix bug allowing perl to stringify numbers
+-Fix bug disallowing weird forms of nan (+nan, -nan)
 
 0.08 2020-06-25
 -Fix bug in TOML table output generation (thanks ijackson)
