Thank oschwald for his contribution

--- a/README.pod
+++ b/README.pod
@@ -345,6 +345,8 @@ A big thank you to those who have contributed code or bug reports:
 
 =item L<noctux|https://github.com/noctux>
 
+=item L<oschwald|https://github.com/oschwald>
+
 =back
 
 =head1 AUTHOR
