--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@
 - Fix an issue with serialisation of nan, inf, and -inf (thanks jjatria)
 - strict_arrays is now strict (strict_arrays still accepted for compatibility)
 - strict mode now disallows trailing commas
+- bugfix: table names whose individual segments include a dot can no longer
+  cause parser to incorrectly identify duplicate table names
 
 0.13 2021-07-26
 -Fix a spurious warning being raised on trailing spaces in hexadecimal numbers (thanks jjatria)
