--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@
 - strict mode now disallows trailing commas
 - bugfix: table names whose individual segments include a dot can no longer
   cause parser to incorrectly identify duplicate table names
+- bugfix: correctly fail on arrays without separators
 
 0.13 2021-07-26
 -Fix a spurious warning being raised on trailing spaces in hexadecimal numbers (thanks jjatria)
