--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@
 - bugfix: table names whose individual segments include a dot can no longer
   cause parser to incorrectly identify duplicate table names
 - bugfix: correctly fail on arrays without separators
+- bugfix: correctly fail when array ends without closing at EOF
 
 0.13 2021-07-26
 -Fix a spurious warning being raised on trailing spaces in hexadecimal numbers (thanks jjatria)
