--- a/Changes
+++ b/Changes
@@ -9,6 +9,7 @@
 - bugfix: correctly fail when inline table is missing separators or has
   trailing separator
 - bugfix: disallow non-permitted control characters in strings and comments
+- bugfix: disallow invalid unicode in input
 
 0.13 2021-07-26
 -Fix a spurious warning being raised on trailing spaces in hexadecimal numbers (thanks jjatria)
