--- a/Changes
+++ b/Changes
@@ -11,6 +11,8 @@
 - bugfix: disallow non-permitted control characters in strings and comments
 - bugfix: disallow invalid unicode in input
 - bugfix: allow double-zero exponents (e00)
+- bugfix: correctly parse multi-line literal strings, dealing properly with
+  some edge cases
 
 0.13 2021-07-26
 -Fix a spurious warning being raised on trailing spaces in hexadecimal numbers (thanks jjatria)
