--- a/Changes
+++ b/Changes
@@ -13,6 +13,8 @@
 - bugfix: allow double-zero exponents (e00)
 - bugfix: correctly parse multi-line literal strings, dealing properly with
   some edge cases
+- bugfix: correctly parse multi-line basic strings, dealing properly with some
+  edge cases
 
 0.13 2021-07-26
 -Fix a spurious warning being raised on trailing spaces in hexadecimal numbers (thanks jjatria)
