--- a/Changes
+++ b/Changes
@@ -15,6 +15,7 @@
   some edge cases
 - bugfix: correctly parse multi-line basic strings, dealing properly with some
   edge cases
+- bugfix: correctly escape unicode control characters in toml output
 
 0.13 2021-07-26
 -Fix a spurious warning being raised on trailing spaces in hexadecimal numbers (thanks jjatria)
