--- a/Changes
+++ b/Changes
@@ -16,6 +16,7 @@
 - bugfix: correctly parse multi-line basic strings, dealing properly with some
   edge cases
 - bugfix: correctly escape unicode control characters in toml output
+- bugfix: correctly handle comment-like sequences in multiline strings
 
 0.13 2021-07-26
 -Fix a spurious warning being raised on trailing spaces in hexadecimal numbers (thanks jjatria)
