--- a/Changes
+++ b/Changes
@@ -17,6 +17,7 @@
   edge cases
 - bugfix: correctly escape unicode control characters in toml output
 - bugfix: correctly handle comment-like sequences in multiline strings
+- bugfix: correctly handle keys with names that are toml keywords
 
 0.13 2021-07-26
 -Fix a spurious warning being raised on trailing spaces in hexadecimal numbers (thanks jjatria)
