--- a/Changes
+++ b/Changes
@@ -26,6 +26,7 @@
 - bugfix: update datetime support to match toml abnf, w/ workaround for
   burntsushi tests supporting lowercase z and toml supporting a space instead
   of T
+- bugfix: fix support for local dates, local times, fractional second precision
 
 0.13 2021-07-26
 -Fix a spurious warning being raised on trailing spaces in hexadecimal numbers (thanks jjatria)
