--- a/Changes
+++ b/Changes
@@ -27,6 +27,7 @@
   burntsushi tests supporting lowercase z and toml supporting a space instead
   of T
 - bugfix: fix support for local dates, local times, fractional second precision
+- bugfix: fix parsing of dotted keys in inline tables
 
 0.13 2021-07-26
 -Fix a spurious warning being raised on trailing spaces in hexadecimal numbers (thanks jjatria)
