--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 {{$NEXT}}
+    - regexp for values which match a DateTime should be anchored to start and
+      end of string (GH#30) (djerius)
 
 0.16 2023-05-31
 - Remove when (GH#25) (Olaf Alders)
