--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 {{$NEXT}}
+- trap and die on undefined values (GH#32) (djerius)
 
 0.18 2024-09-04
 - Support builtin booleans (GH#31) (Tina Mller (tinita))
